PM-530 fix overlapping cc icon

--- a/ext/modules/payment/paymill/public/css/paymill.css
+++ b/ext/modules/payment/paymill/public/css/paymill.css
@@ -69,8 +69,15 @@
     display: none;
 }
 
+.number-extra-field
+{
+    width: 500px;
+}
+
 .card-icon
 {
+    width: 31px;
+    height: 19px;
     margin-left: 5px;
     position: absolute;
 }
